--- a/Ch1_degradation_seedbankNMDS.Rmd
+++ b/Ch1_degradation_seedbankNMDS.Rmd
@@ -146,18 +146,21 @@ seedbank_bysitecore_nmdsprep <- seedbank_bysitecore %>%
   replace(is.na(.), 0) # replace NA with zeros --> isn't compatible with character columns
 
 view(seedbank_bysitecore_nmdsprep)
+# 26 x 45
 ```
 
 ```{r replace NAs with zeros}
 
 # You don't need to run this right now
+
 seedbank_bysitecore_nmdsprep_num <- seedbank_bysitecore_nmdsprep %>% 
   # use the ungroup() function to take out grouping
   ungroup() %>% 
-  select(!c(stand_core, stand, site)) %>% 
+  select(!c(stand_core, stand, site)) %>% # de-select these columns
   replace(is.na(.), 0)
 
 view(seedbank_bysitecore_nmdsprep_num) # only numbers
+# 26 x 42 
 ```
 
 ```{r write nmds matrix to csv}
@@ -180,21 +183,57 @@ seedbank_bysitecore_nmds <- metaMDS(seedbank_bysitecore_nmdsprep_num, distance =
 # stress test, will run 20 times
 seedbank_bysitecore_nmds <- metaMDS(seedbank_bysitecore_nmdsprep_num, autotransform = F)
 ```
+
 ```{r scores nmds}
+
 scores(seedbank_bysitecore_nmds)
-scores(seedbank_bysitecore_nmds) %>% 
-  
-  
-  ggplot(aes(x=NMDS1, y=NMDS2, color = stand_core, shape = stand_core)) +
-geom_point(size = 3, alpha = 0.8) +
-  stat_ellipse()
-  
-# stress tests are really low ==> I may have insufficient data. :/
+```
+
+```{r stress test}
 
 stressplot(seedbank_bysitecore_nmds)
+# if stress tests are really low ==> I may have insufficient data. :/
 
-plot(seedbank_bysitecore_nmds)
+#plot_df <- scores(seedbank_bysitecore_nmds, display = "sites") %>% # from An's code
+#  as.data.frame() %>% 
+#  rownames_to_column("stand_core") %>% 
+#  full_join(seedbank_bysitecore, by = "stand_core")
 
+nmds_df <- data.frame(seedbank_bysitecore_nmds$points, seedbank_bysitecore_nmdsprep) # from chatgpt
+
+
+```
+
+```{r ggplot color}
+ggplot(nmds_df, aes(x = MDS1, y = MDS2, color = stand, shape = stand)) +
+  geom_point(size = 3, alpha = 0.8) +
+  scale_color_manual(values = c("gray0", "gray30", "gray60")) +
+  theme_bw() +
+  stat_ellipse(linetype = 2, size = 1) +
+  labs(title = "NMDS: by seed bank germination counts", color = "Stand type", shape = "Stand type")
+```
+
+```{r ggplot bw}
+ggplot(nmds_df, aes(x = MDS1, y = MDS2, color = stand, shape = stand)) +
+  geom_point(size = 3, alpha = 0.8) +
+  scale_color_manual(values = c("darkgreen", "darkmagenta", "darkgoldenrod1")) +
+  theme_bw() +
+  #stat_ellipse(level = .95, linetype = 2, size = 1) +
+  stat_ellipse(linetype = 2, size = 1) +
+  labs(title = "NMDS: by seed bank germination counts", color = "Stand type", shape = "Stand type")
+
+
+```
+
+```{r plot nmds scores}
+# code from An Bui: https://rpubs.com/an-bui/vegan-cheat-sheet 
+
+
+
+```
+
+
+```{r plot nmds basics}
 #basic normal plot
 ordiplot(seedbank_bysitecore_nmds) # without point labels
 ordiplot(seedbank_bysitecore_nmds, type = "t") # with point labels
