--- a/Ch1_Degradation_abcoverNMDS.Rmd
+++ b/Ch1_Degradation_abcoverNMDS.Rmd
@@ -28,29 +28,28 @@ library(plotly)
 
 ```{r load csv}
 # percent cover
-abcover_full <- read.csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022b/deg_percentcover_byspecies_bylifeform.csv", header = TRUE, na.strings=c("","NA"))
+abcover_full_raw <- read.csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022b/deg_percentcover_byspecies_bylifeform.csv", header = TRUE, na.strings=c("","NA"))
 ```
 
 (1) Organize the percent cover data by converting the dataframe into a tibble.
 ```{r ab percent cover by status, include = TRUE}
 
-dim(abcover_full)
+abcover_full_raw
 # [1] 113   6
-head(abcover_full)
-tail(abcover_full)
+head(abcover_full_raw)
+tail(abcover_full_raw)
 
 # convert dataframe to tibble
-abcover_full <- abcover_full
-abcover_full <- as_tibble(abcover_full) 
+abcover_full_raw <- as_tibble(abcover_full_raw) 
 
-class(abcover_full) # now a tibble
+class(abcover_full_raw) # now a tibble
 ```
 
 (2) Organize the percent cover data by reordering the classes: Intact, Matrix, Degraded.
 ```{r ab percent cover reorder classes to Intact Matrix Degraded}
-abcover_full_v <- abcover_full %>%
+abcover_full_v <- abcover_full_raw %>%
   mutate(standtype = fct_relevel(standtype, 
-            "intact", "matrix", "degraded"))
+            "intact", "enhancement", "degraded"))
 ```
 
 (3) Create new columns for SITE_REP, SITE_REP_DISTANCE, and STAND_STATUS for the percent cover data. 
@@ -76,13 +75,18 @@ head(abcover_full_v_omitground)
 
 (5) Identify the unique species at each site_rep_dist to get rid of duplicate species recordings. (e.g., Present at one distance = 1/41 to get percent cover) 
 ```{r ab percent cover unby species, inclue = TRUE}
+
+# use this for GROUPS: abcover_byspecies
+
 abcover_byspecies <- abcover_full_v_omitground %>% 
-  group_by(standtype, site, site_rep, species, status, lifeform, lifecycle) %>% 
+  group_by(standtype, site, site_rep, species) %>% 
   filter(site_rep != "Intact4_4") %>% #omit Intact 4 from data
   filter(!is.na(species)) %>% # omit blank cells in species 
-  dplyr::summarize(count_per_dist = n_distinct(site_rep_dist), percentcover = n_distinct(site_rep_dist)/41)
+  dplyr::summarize(count_per_dist = n_distinct(site_rep_dist), percentcover = n_distinct(site_rep_dist)/41) %>% 
+   select(!c(count_per_dist))
+  
 
-head(abcover_byspecies) # prints to new tab
+view(abcover_byspecies) # prints to new tab
 ```
 
 (6) Prepare data for an NMDS (percent cover x species x standtype)
@@ -91,20 +95,25 @@ head(abcover_byspecies) # prints to new tab
 abcover_byspecies_nmdsprep <- abcover_byspecies %>% 
   tidyr::spread(species, percentcover) %>% # transpose data so columns are species
   replace(is.na(.), 0) # replace NA with zeros
-view(abcover_byspecies_nmdsprep)
+# view(abcover_byspecies_nmdsprep)
 
 abcover_byspecies_nmdsprep_num <- abcover_byspecies_nmdsprep %>% 
   # use the ungroup() function to take out grouping
   ungroup() %>% 
-  select(!c(site, site_rep, status, lifeform, lifecycle, count_per_dist, standtype))
+  select(!c(standtype, site, site_rep, count_per_dist))
+# 96 observations x 33 species
          
 view(abcover_byspecies_nmdsprep_num) # only numbers
-write.csv(abcover_bylf_bystatus, "~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/deg_percentcover_byspecies_bylifeform.csv", header = TRUE, na.strings=c("","NA"))
+write.csv(abcover_byspecies_nmdsprep_num, "~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022b/processed/nmds_aboveground.csv")
 ```
 
+NMDS 
 ```{r nmds by species percent cover}
-abcover_byspecies_NMDS <- metaMDS(abcover_byspecies_nmdsprep_num, 
+
+abcover_plot_NMDS <- metaMDS(abcover_byspecies_nmdsprep_num, 
                                   distance = "raup")
+
+seedbank_bysitecore_nmds <- metaMDS(seedbank_bysitecore_nmdsprep_num, autotransform = F)
 
 #stressplot(abcover_byspecies_NMDS)
 #plot(abcover_byspecies_NMDS)
