--- a/Ch1_Degradation_abcoverNMDS.Rmd
+++ b/Ch1_Degradation_abcoverNMDS.Rmd
@@ -114,7 +114,7 @@ NMDS
 abcover_byspecies_NMDS <- metaMDS(abcover_byspecies_nmdsprep_num, 
                                   distance = "raup")
 
-abcover_byspecies_NMDS <- metaMDS(seedbank_bysitecore_nmdsprep_num, autotransform = F)
+# abcover_byspecies_NMDS <- metaMDS(seedbank_bysitecore_nmdsprep_num, autotransform = F)
 
 #stressplot(abcover_byspecies_NMDS)
 #plot(abcover_byspecies_NMDS)
@@ -164,12 +164,119 @@ ggplot(nmds_above_df, aes(x = MDS1, y = MDS2, color = standtype, shape = standty
 
 ```
 
-
+NMDS
+NMDS
 NMDS by Plots! to determine which species are driving transect disimiliarity. 
-```{r}
+
+(5) Identify the unique species at each site_rep_dist to get rid of duplicate species recordings. (e.g., Present at one distance = 1/41 to get percent cover) 
+```{r ab percent cover unby species, inclue = TRUE}
+
+abcover_byplot_groups <- abcover_full_v_omitground %>% 
+  select(c(standtype, site, site_rep, species))
+head(abcover_byplot_groups)
+
+abcover_byplot_prep <- abcover_full_v_omitground %>% 
+  group_by(standtype, site, site_rep, species) %>% 
+  filter(site_rep != "Intact4_4") %>% #omit Intact 4 from data
+  filter(!is.na(species)) %>% # omit blank cells in species 
+  dplyr::summarize(count_per_dist = n_distinct(site_rep_dist), percentcover = n_distinct(site_rep_dist)/41) 
+  
+view(abcover_byplot_prep) # prints to new tab
+
+abcover_byplot <- abcover_byplot_prep %>% 
+  select(c(site_rep, species, percentcover))
+
+write.csv(abcover_byplot, "~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022b/processed/abcover_byplot.csv")
+
+abcover_byplot_load <- read.csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022b/processed/abcover_byplot_onlysite_repsppcover.csv", header = TRUE, na.strings=c("","NA"))
+```
+
+
+(6) Prepare data for an NMDS (percent cover x species x standtype)
+```{r transpose percent cover data by species, include=TRUE}
+
+# use this for GROUPS: abcover_byplot_nmdsprep
+
+abcover_byplot_nmdsprep <- abcover_byplot_load %>% 
+  tidyr::spread(site_rep, percentcover) %>% # transpose data so columns are species
+  replace(is.na(.), 0) # replace NA with zeros
+view(abcover_byplot_nmdsprep)
+
+abcover_byplot_nmdsprep_num <- abcover_byplot_nmdsprep %>% 
+  # use the ungroup() function to take out grouping
+  ungroup() %>% 
+  select(!c(species))
+# 33 species (rows) by 15 sites (columns)
+# DEG 1-6, ENH 1-6, INT 1-3 = 15 transects
 
 ```
 
+```{r write nmds to csv}
+view(abcover_byplot_nmdsprep_num) # only numbers
+write.csv(abcover_byplot_nmdsprep_num, "~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022b/processed/nmds_aboveground.csv")
+```
+
+(7) NMDS 
+```{r stress tests}
+# USE THIS ONE!
+
+# str(seedbank_bysitecore_nmdsprep_num)
+# stand_core_depth -->  tibble [89 × 52]
+
+# stress test, will run 20 times
+seedbank_byplot_nmds <- metaMDS(abcover_byplot_nmdsprep_num, distance = "raup")
+# stress tests are really low ==> I may have insufficient data. :/
+
+# stress test, will run 20 times
+seedbank_byplot_nmds <- metaMDS(abcover_byplot_nmdsprep_num, autotransform = F)
+```
+
+```{r scores nmds}
+
+scores(seedbank_byplot_nmds)
+
+```
+
+
+```{r stress test}
+
+stressplot(seedbank_byplot_nmds)
+# if stress tests are really low ==> I may have insufficient data. :/
+
+#plot_df <- scores(seedbank_bysitecore_nmds, display = "sites") %>% # from An's code
+#  as.data.frame() %>% 
+#  rownames_to_column("stand_core") %>% 
+#  full_join(seedbank_bysitecore, by = "stand_core")
+
+nmds_df <- data.frame(seedbank_byplot_nmds$points, # unnamed column is species n = 33
+                      abcover_byplot_nmdsprep) # from chatgpt
+head(nmds_df)
+```
+
+
+```{r ggplot bw}
+
+ggplot
+
+ggplot(nmds_df, aes(x = MDS1, y = MDS2, color = stand, shape = stand)) +
+  geom_point(size = 3, alpha = 0.8) +
+  scale_color_manual(values = c("gray0", "gray30", "gray60")) +
+  theme_bw() +
+  stat_ellipse(linetype = 2, size = 1) +
+  labs(title = "NMDS: by seed bank germination counts", color = "Stand type", shape = "Stand type")
+```
+
+```{r ggplot color}
+ggplot(nmds_df, aes(x = MDS1, y = MDS2, color = stand, shape = stand)) +
+  geom_point(size = 3, alpha = 0.8) +
+  scale_color_manual(values = c("darkgreen", "darkmagenta", "darkgoldenrod1")) +
+  theme_bw() +
+  #stat_ellipse(level = .95, linetype = 2, size = 1) +
+  stat_ellipse(linetype = 2, size = 1) +
+  labs(title = "NMDS: by seed bank germination counts", color = "Stand type", shape = "Stand type")
+
+
+```
 
 
 
