--- a/Ch1_Degradation_abcoverNMDS.Rmd
+++ b/Ch1_Degradation_abcoverNMDS.Rmd
@@ -49,7 +49,11 @@ class(abcover_full_raw) # now a tibble
 ```{r ab percent cover reorder classes to Intact Matrix Degraded}
 abcover_full_v <- abcover_full_raw %>%
   mutate(standtype = fct_relevel(standtype, 
-            "intact", "enhancement", "degraded"))
+            "intact", "enhancement", "degraded")) 
+
+# renaming observations
+abcover_full_v$standtype <- factor(abcover_full_v$standtype, levels=c("intact", "enhancement", "degraded"), labels=c("Intact", "Matrix", "Degraded"))
+
 ```
 
 (3) Create new columns for SITE_REP, SITE_REP_DISTANCE, and STAND_STATUS for the percent cover data. 
@@ -63,6 +67,9 @@ abcover_full_v$site_rep_dist <- paste(abcover_full_v$site_rep, abcover_full_v$di
 
 # combine standtype and native/nonnative status to one column
 abcover_full_v$stand_status <- paste(abcover_full_v$standtype, abcover_full_v$status, sep="_") 
+
+# combine site_rep and species to one column
+abcover_full_v$site_rep_species <- paste(abcover_full_v$site_rep, abcover_full_v$species, sep="_") 
 
 head(abcover_full_v) # look at new columns
 ```
@@ -142,27 +149,105 @@ nmds_above_df <- data.frame(abcover_byspecies_NMDS$points, abcover_byspecies_nmd
 ```
 
 
-```{r ggplot above bw}
-ggplot(nmds_above_df, aes(x = MDS1, y = MDS2, color = standtype, shape = standtype)) +
-  geom_point(size = 3, alpha = 0.8) +
-  scale_color_manual(values = c("gray0", "gray30", "gray60")) +
-  scale_shape_manual(values = c(16, 4, 15)) +
-  theme_bw() +
-  stat_ellipse(linetype = 2, size = 1) +
-  labs(title = "NMDS: by percent cover", color = "Stand type", shape = "Stand type")
-```
-
-```{r ggplot aove color}
-ggplot(nmds_above_df, aes(x = MDS1, y = MDS2, color = standtype, shape = standtype)) +
+```{r ggplot above ground}
+nmds_above_df_plotcolor <- ggplot(nmds_above_df, aes(x = MDS1, y = MDS2, color = standtype, shape = standtype)) +
   geom_point(size = 3, alpha = 0.8) +
   scale_color_manual(values = c("darkgreen", "darkmagenta", "darkgoldenrod1")) +
+  # scale_color_manual(values = c("gray0", "gray30", "gray60")) +
   theme_bw() +
-  #stat_ellipse(level = .95, linetype = 2, size = 1) +
-  stat_ellipse(linetype = 2, size = 1) +
+  theme(legend.position = c(0.1, 0.85)) + # x, y left corner: 0,0
+  stat_ellipse(level = .95, linetype = 2, size = 1) +
   labs(title = "NMDS: by percent cover", color = "Stand type", shape = "Stand type")
-
+nmds_above_df_plotcolor
 
 ```
+
+```{r byplot - ggplot vectors and measurments}
+
+#this makes a dataframe that gives a lot of control graphically 
+abcover_byspecies_NMDS_fort <- fortify(abcover_byspecies_NMDS)
+
+nmds_above_df
+
+# vectors AND measurments
+abcover_byspecies_NMDS_fortplot <- ggplot() + 
+  geom_point(data = subset(abcover_byspecies_NMDS_fort, Score == 'sites'),
+             mapping = aes(x = NMDS1, y = NMDS2, group = ""),
+             color = 'black',
+             size = 4,
+             alpha = 1) +
+  geom_segment(data = subset(abcover_byspecies_NMDS_fort, Score == 'species'),
+               mapping = aes(x = 0, y = 0, xend = NMDS1, yend = NMDS2),
+               arrow = arrow(length = unit(0.015, "npc"),
+                             type = 'closed'),
+               color = 'darkgrey',
+               linewidth = 0.8) +
+  geom_text(data = subset(abcover_byspecies_NMDS_fort, Score == 'species'),
+            mapping = aes(label = Label, x = NMDS1*1.1, y = NMDS2*1.1), 
+            position = position_jitter(width = 0.2, height = 0.2)) +
+  geom_abline(intercept = 0,slope = 0,linetype = "dashed", linewidth = 0.8,colour = "gray")+
+  geom_vline(aes(xintercept = 0), linetype = "dashed", linewidth = 0.8, colour = "gray")+
+  theme(panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        axis.line = element_line(colour = "black"))
+abcover_byspecies_NMDS_fortplot
+
+#only vectors shown
+abcover_byspecies_NMDS_fortplot1 <- ggplot() + 
+  geom_point(data = subset(abcover_byspecies_NMDS_fort, Score == 'sites'),
+             mapping = aes(x = NMDS1, y = NMDS2),
+             color = 'black',
+             alpha = 0) +
+  geom_segment(data = subset(abcover_byspecies_NMDS_fort, Score == 'species'),
+               mapping = aes(x = 0, y = 0, xend = NMDS1, yend = NMDS2),
+               arrow = arrow(length = unit(0.015, "npc"),
+                             type = 'closed'),
+               color = 'darkgrey',
+               linewidth = 0.8) +
+  geom_text(data = subset(abcover_byspecies_NMDS_fort, Score == 'species'),
+            mapping = aes(label = Label, x = NMDS1*1.1, y = NMDS2*1.1),
+            position = position_jitter(width = 0.9, height = 0.9)) +
+  geom_abline(intercept = 0,slope = 0,linetype = "dashed", linewidth = 0.8,colour = "gray")+
+  geom_vline(aes(xintercept = 0), linetype = "dashed", size = 0.8, colour = "gray")+
+  theme(panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        axis.line = element_line(colour = "black"))
+abcover_byspecies_NMDS_fortplot1
+
+#only measurements shown
+abcover_byspecies_NMDS_fortplot2 <- ggplot() + 
+  geom_point(data = subset(abcover_byspecies_NMDS_fort, Score == 'sites'),
+             mapping = aes(x = NMDS1, y = NMDS2),
+             color = 'black',
+             alpha = 0.5) +
+  geom_segment(data = subset(abcover_byspecies_NMDS_fort, Score == 'species'),
+               mapping = aes(x = 0, y = 0, xend = NMDS1, yend = NMDS2),
+               arrow = arrow(length = unit(0.015, "npc"),
+                             type = 'closed'),
+               color = 'darkgrey',
+               size = 0.8,
+               alpha = 0) +
+  geom_text(data = subset(abcover_byspecies_NMDS_fort, Score == 'species'),
+            mapping = aes(label = Label, x = NMDS1*1.1, y = NMDS2*1.1),
+            position = position_jitter(width = 0.2, height = 0.2),
+            alpha = 0)+
+  geom_abline(intercept = 0,slope = 0,linetype = "dashed", size = 0.8,colour = "gray")+
+  geom_vline(aes(xintercept = 0), linetype = "dashed", size = 0.8, colour = "gray")+
+  theme(panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        axis.line = element_line(colour = "black"))
+abcover_byspecies_NMDS_fortplot2
+
+#interactive plots that I like
+ggplotly(abcover_byspecies_NMDS_fortplot)
+
+#show both plots 
+hi_above <- ggarrange(nmds_above_df_plotcolor, abcover_byspecies_NMDS_fortplot, ncol = 1)
+hi_above
+
+```
+
+
 
 NMDS
 NMDS
@@ -186,9 +271,9 @@ view(abcover_byplot_prep) # prints to new tab
 abcover_byplot <- abcover_byplot_prep %>% 
   select(c(site_rep, species, percentcover))
 
-#write.csv(abcover_byplot, "~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022b/processed/abcover_byplot.csv")
+write.csv(abcover_byplot, "~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022b/processed/abcover_byplot.csv")
 
-#abcover_byplot_load <- read.csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022b/processed/abcover_byplot_onlysite_repsppcover.csv", header = TRUE, na.strings=c("","NA"))
+abcover_byplot_load <- read.csv("~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022b/processed/abcover_byplot_onlysite_repsppcover.csv", header = TRUE, na.strings=c("","NA"))
 ```
 
 
@@ -197,7 +282,9 @@ abcover_byplot <- abcover_byplot_prep %>%
 
 # use this for GROUPS: abcover_byplot_nmdsprep
 
-abcover_byplot_nmdsprep <- abcover_byplot %>% 
+head(abcover_byplot_load)
+
+abcover_byplot_nmdsprep <- abcover_byplot_load %>% 
   tidyr::spread(site_rep, percentcover) %>% # transpose data so columns are species
   replace(is.na(.), 0) # replace NA with zeros
 view(abcover_byplot_nmdsprep)
@@ -206,7 +293,7 @@ dim(abcover_byplot_nmdsprep)
 abcover_byplot_nmdsprep_num <- abcover_byplot_nmdsprep %>% 
   # use the ungroup() function to take out grouping
   ungroup() %>% 
-  select(!c(species, standtype, site))
+  select(!c(species))
 # 33 species (rows) by 15 sites (columns)
 # DEG 1-6, ENH 1-6, INT 1-3 = 15 transects
 dim(abcover_byplot_nmdsprep_num)
@@ -226,7 +313,6 @@ write.csv(abcover_byplot_nmdsprep_num, "~/Dropbox/GRADSCHOOL/Dissertation/R_diss
 
 # stress test, will run 20 times
 seedbank_byplot_nmds <- metaMDS(abcover_byplot_nmdsprep_num, distance = "raup")
-# stress tests are really low ==> I may have insufficient data. :/
 
 # stress test, will run 20 times
 seedbank_byplot_nmds <- metaMDS(abcover_byplot_nmdsprep_num, autotransform = F)
@@ -254,10 +340,96 @@ nmds_df <- data.frame(seedbank_byplot_nmds$points, # unnamed column is species n
 view(nmds_df)
 ```
 
-
 ```{r ggplot bw}
+ggplot(nmds_df, aes(x = MDS1, y = MDS2, color = stand, shape = stand)) +
+  geom_point(size = 3, alpha = 0.8) +
+  scale_color_manual(values = c("gray0", "gray30", "gray60")) +
+  theme_bw() +
+  stat_ellipse(linetype = 2, size = 1) +
+  labs(title = "NMDS: by seed bank germination counts", color = "Stand type", shape = "Stand type")
+```
 
-ggplot(nmds_df, aes(x = MDS1, y = MDS2, color = standtype)) +
+```{r with vectors}
+
+#this makes a dataframe that gives a lot of control graphically 
+seedbank_byplot_nmds_fort <- fortify(seedbank_byplot_nmds)
+
+# vectors AND measurments
+seedbank_byplot_nmdsfortplot <- ggplot() + 
+  geom_point(data = subset(seedbank_byplot_nmds_fort, Score == 'sites'),
+             mapping = aes(x = NMDS1, y = NMDS2),
+             color = 'black',
+             alpha = 0.5) +
+  geom_segment(data = subset(seedbank_byplot_nmds_fort, Score == 'species'),
+               mapping = aes(x = 0, y = 0, xend = NMDS1, yend = NMDS2),
+               arrow = arrow(length = unit(0.015, "npc"),
+                             type = 'closed'),
+               color = 'darkgrey',
+               linewidth = 0.8) +
+  geom_text(data = subset(seedbank_byplot_nmds_fort, Score == 'species'),
+            mapping = aes(label = Label, x = NMDS1*1.1, y = NMDS2*1.1))+
+  geom_abline(intercept = 0,slope = 0,linetype = "dashed", linewidth = 0.8,colour = "gray")+
+  geom_vline(aes(xintercept = 0), linetype = "dashed", linewidth = 0.8, colour = "gray")+
+  theme(panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        axis.line = element_line(colour = "black"))
+
+#only vectors shown
+seedbank_byplot_nmds_fortplot1 <- ggplot() + 
+  geom_point(data = subset(seedbank_byplot_nmds_fort, Score == 'sites'),
+             mapping = aes(x = NMDS1, y = NMDS2),
+             color = 'black',
+             alpha = 0) +
+  geom_segment(data = subset(seedbank_byplot_nmds_fort, Score == 'species'),
+               mapping = aes(x = 0, y = 0, xend = NMDS1, yend = NMDS2),
+               arrow = arrow(length = unit(0.015, "npc"),
+                             type = 'closed'),
+               color = 'darkgrey',
+               linewidth = 0.8) +
+  geom_text(data = subset(seedbank_byplot_nmds_fort, Score == 'species'),
+            mapping = aes(label = Label, x = NMDS1*1.1, y = NMDS2*1.1))+
+  geom_abline(intercept = 0,slope = 0,linetype = "dashed", linewidth = 0.8,colour = "gray")+
+  geom_vline(aes(xintercept = 0), linetype = "dashed", size = 0.8, colour = "gray")+
+  theme(panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        axis.line = element_line(colour = "black"))
+seedbank_byplot_nmds_fortplot1
+```
+```{r plot measurements only }
+#only measurements shown
+seedbank_byplot_nmds_fortplot2 <- ggplot() + 
+  geom_point(data = subset(seedbank_byplot_nmds_fort, Score == 'sites'),
+             mapping = aes(x = NMDS1, y = NMDS2),
+             color = 'black',
+             alpha = 0.5) +
+  geom_segment(data = subset(seedbank_byplot_nmds_fort, Score == 'species'),
+               mapping = aes(x = 0, y = 0, xend = NMDS1, yend = NMDS2),
+               arrow = arrow(length = unit(0.015, "npc"),
+                             type = 'closed'),
+               color = 'darkgrey',
+               size = 0.8,
+               alpha = 0) +
+  geom_text(data = subset(seedbank_byplot_nmds_fort, Score == 'species'),
+            mapping = aes(label = Label, x = NMDS1*1.1, y = NMDS2*1.1),
+            alpha = 0)+
+  geom_abline(intercept = 0,slope = 0,linetype = "dashed", size = 0.8,colour = "gray")+
+  geom_vline(aes(xintercept = 0), linetype = "dashed", size = 0.8, colour = "gray")+
+  theme(panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        axis.line = element_line(colour = "black"))
+
+#interactive plots that I like
+ggplotly(seedbank_bysitecore_nmds_fortplot)
+
+#show both plots 
+hi <- ggarrange(seedbank_bysitecore_nmds_fortplot1, seedbank_bysitecore_nmds_fortplot2, ncol = 1)
+hi
+
+```
+
+
+
+ggplot(nmds_df, aes(x = MDS1, y = MDS2)) +
   geom_point()+
   theme_bw() +
   stat_ellipse(linetype = 2, size = 1) +
@@ -329,7 +501,7 @@ ordiplot(abcover_byspecies_NMDS) # without point labels
 ordiplot(abcover_byspecies_NMDS, type = "t") # with point labels
 
 #ggvegan to make a quick nice plot
-autoplot(seedbank_byplot_nmds) # NMDS1 x NMDS2, Key = "Score": sites, species
+autoplot(abcover_byspecies_NMDS) # NMDS1 x NMDS2, Key = "Score": sites, species
 
 
 
