--- a/Ch1_degradation_seedbankNMDS.Rmd
+++ b/Ch1_degradation_seedbankNMDS.Rmd
@@ -230,14 +230,6 @@ seedbank_nmds_plot_color
 
 ```
 
-```{r plot nmds scores}
-# code from An Bui: https://rpubs.com/an-bui/vegan-cheat-sheet 
-
-
-
-```
-
-
 ```{r plot nmds basics}
 #basic normal plot
 ordiplot(seedbank_bysitecore_nmds) # without point labels
@@ -328,6 +320,57 @@ hi_below <- ggarrange(seedbank_nmds_plot_color, seedbank_bysitecore_nmds_fortplo
 hi_below
 
 ```
+
+
+```{r nmds color and vectors with envfit function}
+# code from An Bui: https://rpubs.com/an-bui/vegan-cheat-sheet 
+
+# START HERE - I NEED TO COMBINE DATA FRAMES TO RUN THE NEW PLOTS
+
+plot_below_df <- scores(seedbank_bysitecore_nmds, display = "sites") %>% 
+  as.data.frame() %>% 
+  rownames_to_column("stand_core") %>% 
+  full_join(seedbank_bysitecore, by = "stand_core") %>% 
+  full_join(seedbank_bysitecore_nmdsprep, by = "")
+
+# envfit() takes the output of metaMDS() and the species matrix you created
+fit_below <- envfit(seedbank_bysitecore_nmds, seedbank_bysitecore_nmdsprep, perm = 999) # pvalues for spp and stand, site, stand_core
+
+# extract p-values for each species
+fit_below_pvals <- fit_below$vectors$pvals %>% 
+  as.data.frame() %>% 
+  rownames_to_column("species") %>% 
+  dplyr::rename("pvals" = ".")
+
+# extract coordinates for species, only keep species with p-val = 0.001
+fit_below_spp <- fit_below %>% 
+  scores(., display = "vectors") %>% 
+  as.data.frame() %>% 
+  rownames_to_column("species") %>% 
+  full_join(., fit_below_pvals, by = "species") %>% 
+  filter(pvals < 0.05)
+
+# new plot
+nmdsbelow_plot_new <- ggplot(plot_below_df, aes(x = NMDS1, y = NMDS2)) +
+  coord_fixed() +
+  geom_point(aes(color = stand, shape = stand), size = 3, alpha = 0.8) +
+  stat_ellipse(aes(color = stand)) +
+   scale_color_manual(values = c("darkgreen", "darkmagenta", "darkgoldenrod1")) +
+  geom_segment(data = fit_below_spp, aes(x = 0, xend = NMDS1, y = 0, yend = NMDS2),
+               arrow = arrow(length = unit(0.25, "cm")),
+               col = "black") +
+  geom_text(data = fit_below_spp, aes(label = species))
+nmdsbelow_plot_new
+
+```
+
+
+
+
+
+
+
+
 
 ```{r NMDS ellipses}
 
