--- a/Ch1_Degradation_abcoverNMDS.Rmd
+++ b/Ch1_Degradation_abcoverNMDS.Rmd
@@ -115,13 +115,13 @@ abcover_byspecies_nmdsprep <- abcover_byspecies %>%
 abcover_byspecies_nmdsprep$standtype_ID <- 1:15
 
 view(abcover_byspecies_nmdsprep)
-
+# 15 sites (rows) by 37 columns
 
 abcover_byspecies_nmdsprep_num <- abcover_byspecies_nmdsprep %>% 
   # use the ungroup() function to take out grouping
   ungroup() %>% 
-  select(!c(standtype, site, site_rep))
-# 15 sites (rows) by 36 species (columns)
+  select(!c(standtype, site, site_rep, standtype_ID))
+# 15 sites (rows) by 33 species (columns)
 # DEG 1-6, ENH 1-6, INT 1-3 = 15 transects
          
 view(abcover_byspecies_nmdsprep_num) # only numbers
@@ -131,10 +131,19 @@ write.csv(abcover_byspecies_nmdsprep_num, "~/Dropbox/GRADSCHOOL/Dissertation/R_d
 NMDS 
 ```{r nmds by species percent cover}
 
-abcover_byspecies_NMDS <- metaMDS(abcover_byspecies_nmdsprep_num, 
-                                  distance = "raup")
+# the AUTOTRANSFORM = F skips the automatic data transformations and uses the input data as is
+# - when the raw data contains the information you need (e.g., abundance)
+# - when you have a small number of samples or small number of variables
+# - when you want to preseve the original scale of the data (e.g., interested in the absolute differences betwen two sets of measurements)
+abcover_byspecies_NMDS <- metaMDS(abcover_byspecies_nmdsprep_num, autotransform = F)
 
-# abcover_byspecies_NMDS <- metaMDS(seedbank_bysitecore_nmdsprep_num, autotransform = F)
+
+# uses the RAUP-CRICK dissimilarity index to calculate pairwise dissimilarities
+# - adjusts for spp richness
+# - downweights importance of rare spp 
+# - more useful when interested in community STRUCTURE rather than individual species
+# - takes into account differences in species evenness
+# abcover_byspecies_NMDS <- metaMDS(abcover_byspecies_nmdsprep_num, distance = "raup") 
 
 #stressplot(abcover_byspecies_NMDS)
 #plot(abcover_byspecies_NMDS)
