--- a/Ch1_Degradation_abcoverNMDS.Rmd
+++ b/Ch1_Degradation_abcoverNMDS.Rmd
@@ -135,7 +135,7 @@ NMDS
 # - when the raw data contains the information you need (e.g., abundance)
 # - when you have a small number of samples or small number of variables
 # - when you want to preseve the original scale of the data (e.g., interested in the absolute differences betwen two sets of measurements)
-abcover_byspecies_NMDS <- metaMDS(abcover_byspecies_nmdsprep_num, autotransform = F)
+abcover_byspecies_NMDS <- metaMDS(abcover_byspecies_nmdsprep_num, autotransform = F) # this is more appropriate for my data
 
 
 # uses the RAUP-CRICK dissimilarity index to calculate pairwise dissimilarities
@@ -178,11 +178,69 @@ nmds_above_df_plotcolor <- ggplot(nmds_above_df, aes(x = MDS1, y = MDS2, color =
   # scale_color_manual(values = c("gray0", "gray30", "gray60")) + # in bw
   theme_bw() +
   theme(legend.position = c(0.1, 0.85)) + # x, y left corner: 0,0
-  stat_ellipse(level = .95, linetype = 2, size = 1) +
+  stat_ellipse(level = .95, linetype = 2, linewidth = 1) +
   labs(title = "NMDS: by percent cover", color = "Stand type", shape = "Stand type")
 nmds_above_df_plotcolor
 
 ```
+
+
+
+
+```{r nmds color and vectors with envfit function}
+# code from An Bui: https://rpubs.com/an-bui/vegan-cheat-sheet 
+
+nmds_above_df <- data.frame(abcover_byspecies_NMDS$points, abcover_byspecies_nmdsprep) # code from chatgpt
+
+seedbank_bysitecore_nmdsprep <- seedbank_bysitecore_nmdsprep %>% 
+  mutate(standtype_ID = 1)
+
+seedbank_bysitecore_nmdsprep$standtype_ID <- 1:26
+
+plot_below_df <- scores(seedbank_bysitecore_nmds, display = "sites") %>% 
+  as.data.frame() %>% 
+  rownames_to_column("standtype_ID") %>% 
+  mutate_at(c('standtype_ID'), as.numeric) %>% 
+  full_join(seedbank_bysitecore_nmdsprep, by = "standtype_ID")
+#view(plot_below_df)
+
+# envfit() takes the output of metaMDS() and the species matrix you created
+fit_below <- envfit(seedbank_bysitecore_nmds, seedbank_bysitecore_nmdsprep, perm = 999) # pvalues for spp and stand, site, stand_core
+
+# extract p-values for each species
+fit_below_pvals <- fit_below$vectors$pvals %>% 
+  as.data.frame() %>% 
+  rownames_to_column("species") %>% 
+  dplyr::rename("pvals" = ".")
+#view(fit_below_pvals)
+
+# extract coordinates for species, only keep species with p-val = 0.05
+fit_below_spp <- fit_below %>% 
+  scores(., display = "vectors") %>% 
+  as.data.frame() %>% 
+  rownames_to_column("species") %>% 
+  full_join(., fit_below_pvals, by = "species") %>% 
+  filter(pvals < 0.004) %>% # limited number for visual clarity
+  filter(!species == 'standtype_ID')
+
+# new plot
+nmdsbelow_plot_new <- ggplot(plot_below_df, aes(x = NMDS1, y = NMDS2)) +
+  coord_fixed() +
+  geom_point(aes(color = stand, shape = stand), size = 3, alpha = 0.8) +
+  stat_ellipse(aes(color = stand)) +
+   scale_color_manual(values = c("darkgreen", "darkmagenta", "darkgoldenrod1")) +
+  geom_segment(data = fit_below_spp, aes(x = 0, xend = NMDS1, y = 0, yend = NMDS2),
+               arrow = arrow(length = unit(0.25, "cm")),
+               col = "black") +
+  geom_text(data = fit_below_spp, aes(label = species),  
+            position = position_jitter(width = 0.2, height = 0.2))
+nmdsbelow_plot_new
+
+```
+
+
+
+
 
 ```{r byplot - ggplot vectors and measurments}
 
