--- a/Ch1_degradation_seedbankNMDS.Rmd
+++ b/Ch1_degradation_seedbankNMDS.Rmd
@@ -45,7 +45,8 @@ str(seedbank_load)
 
 # load without unknowns and NAs <-- how do I omit UNKNOWNs?
 seedbank_load %>%
-  filter(!str_detect(species, "unk")) 
+  filter(!str_detect(species, "unk"), 
+         !str_detect(species, "Typha spp.")) 
 
 # rename treatments to be all lowercase 
 seedbank_load <- seedbank_load %>% 
@@ -65,6 +66,13 @@ unique(seedbank_load$soilcore)
 unique(seedbank_load$depthname)
 unique(seedbank_load$treatment)
 unique(seedbank_load$species)
+seedbank_load <- seedbank_load %>% 
+  filter(species != "Typha spp. ") # will omit Typha
+
+seedbank_load <- seedbank_load[seedbank_load$species != "Typha spp. ", ] # will remove Typha from the df
+
+view(seedbank_load)
+
 ```
 
 (1) Organize the seed bank data by converting the df into a tibble.
@@ -115,7 +123,7 @@ head(seedbank_load_v_omitpretreatment)
 
 unique(seedbank_load_v_omitpretreatment$treatment) # list unique treatments --> ordered: control, charate, oven, ovenchar
 unique(seedbank_load_v_omitpretreatment$status) # list unique treatments --> native, nonnative
-unique(seedbank_load_v_omitpretreatment$species) # list unique species --> 42 species
+unique(seedbank_load_v_omitpretreatment$species) # list unique species --> 41 species
 unique(seedbank_load_v_omitpretreatment$stand_core) # unique stand_core --> 26 = 7 + 10 + 9
 
 ```
@@ -231,9 +239,9 @@ ggplot(nmds_df, aes(x = MDS1, y = MDS2, color = stand, shape = stand)) +
 seedbank_nmds_plot_color <- ggplot(nmds_df, aes(x = MDS1, y = MDS2, color = stand, shape = stand)) +
   geom_point(size = 3, alpha = 0.8) +
   scale_color_manual(values = c("darkgreen", "darkmagenta", "darkgoldenrod1")) +
-  # theme_bw() +
-  theme_ipsum_rc() +
-  theme(legend.position = c(0.15, 0.15)) + # x, y left corner: 0,0
+  theme_bw() +
+  #theme_ipsum_rc() +
+  theme(legend.position = c(0.15, 0.83)) + # x, y left corner: 0,0
   #stat_ellipse(level = .95, linetype = 2, size = 1) +
   stat_ellipse(linetype = 2, size = 1) +
   labs(title = "NMDS: by seed bank germination counts", color = "Stand type", shape = "Stand type")
@@ -257,8 +265,10 @@ plot_below_df <- scores(seedbank_bysitecore_nmds, display = "sites") %>%
   as.data.frame() %>% 
   rownames_to_column("standtype_ID") %>% 
   mutate_at(c('standtype_ID'), as.numeric) %>% 
-  full_join(seedbank_bysitecore_nmdsprep, by = "standtype_ID")
-#view(plot_below_df)
+  full_join(seedbank_bysitecore_nmdsprep, by = "standtype_ID") %>%  
+  select(!c(standtype_ID))
+
+view(plot_below_df)
 
 # envfit() takes the output of metaMDS() and the species matrix you created
 fit_below <- envfit(seedbank_bysitecore_nmds, seedbank_bysitecore_nmdsprep, perm = 999) # pvalues for spp and stand, site, stand_core
@@ -267,8 +277,9 @@ fit_below <- envfit(seedbank_bysitecore_nmds, seedbank_bysitecore_nmdsprep, perm
 fit_below_pvals <- fit_below$vectors$pvals %>% 
   as.data.frame() %>% 
   rownames_to_column("species") %>% 
-  dplyr::rename("pvals" = ".")
-#view(fit_below_pvals)
+  dplyr::rename("pvals" = ".") %>% 
+  filter(!species == 'standtype_ID')
+view(fit_below_pvals)
 
 # extract coordinates for species, only keep species with p-val = 0.05
 fit_below_spp <- fit_below %>% 
@@ -276,12 +287,12 @@ fit_below_spp <- fit_below %>%
   as.data.frame() %>% 
   rownames_to_column("species") %>% 
   full_join(., fit_below_pvals, by = "species") %>% 
-  filter(pvals < 0.004) %>% # limited number for visual clarity
+  filter(pvals <= 0.005) %>% # limited number for visual clarity
   filter(!species == 'standtype_ID')
 
 # new plot
 nmdsbelow_plot_new <- ggplot(plot_below_df, aes(x = NMDS1, y = NMDS2)) +
-  coord_fixed() +
+  #coord_fixed() +
   geom_point(aes(color = stand, shape = stand), size = 3, alpha = 0.8) +
   stat_ellipse(aes(color = stand)) +
    scale_color_manual(values = c("darkgreen", "darkmagenta", "darkgoldenrod1")) +
@@ -289,8 +300,8 @@ nmdsbelow_plot_new <- ggplot(plot_below_df, aes(x = NMDS1, y = NMDS2)) +
                arrow = arrow(length = unit(0.25, "cm")),
                col = "black") +
   geom_text(data = fit_below_spp, aes(label = species),  
-            position = position_jitter(width = 0.2, height = 0.2))
-nmdsbelow_plot_new
+            position = position_jitter(width = 0.2, height = 0.4))
+nmdsbelow_plot_new + theme_bw()
 
 ```
 
